--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "deploy":
-      "scp -r dist aso:www/rankgames2/ && scp index.html aso:www/rankgames2"
+    "deploy": "scp -r dist aso:www/rankgames2/ && scp index.html aso:www/rankgames2"
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "boom": "^7.2.0",
     "bootstrap": "^4.1.0",
     "bootstrap-vue": "^2.0.0-rc.8",
     "moment": "^2.22.1",
